# rsm-assignment

./: .env.example  .gitignore  CLAUDE.md  README.md  clean.sh  docker-compose-build-run.sh  docker-compose-clean-all.sh  docker-compose.yml
app/: Dockerfile  docker_run.sh  pyproject.toml  requirements.txt
app/src/: main.py
rag_microservice/: CLAUDE.md  Dockerfile  docker_build.sh  pyproject.toml  requirements.txt  run_fastapi.sh
rag_microservice/src/: ingest.py  main.py  query.py
res/: GenAI_TakeHome_Test_2.md  overview.md
resources/: overview.md
test/: test_ingest_text_text.sh  test_ingest_url_pdf.sh  test_query_llm_langs.sh
util/: clean.sh
